Fixed overflow issue

--- a/src/app/component/compare-dialog/compare-dialog.component.css
+++ b/src/app/component/compare-dialog/compare-dialog.component.css
@@ -1,5 +1,4 @@
 canvas {
   width: 500px !important;
-  width: 500px !important;
   display: inline-block !important;
 }
