--- a/src/app/component/search-results/search-results.component.css
+++ b/src/app/component/search-results/search-results.component.css
@@ -17,7 +17,7 @@ canvas {
   transition: all 0.1s ease-in-out;
 
   position: fixed;
-  right: 210px;
+  right: 50px;
   bottom: 400px;
 }
 
